[gd_scene load_steps=6 format=3 uid="uid://dhx3e10qj834q"]

[ext_resource type="Texture2D" uid="uid://8hm68bgddvi0" path="res://Assets/CharacterSprites/tetoTest.png" id="1_6m2pv"]
[ext_resource type="Script" uid="uid://cj4hv3bd0jxsn" path="res://Scenes/TurnBasedRPG_Scene/rpg_character.gd" id="1_ygs42"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ygs42"]
bg_color = Color(0.0253638, 0.0253638, 0.0253638, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vvltl"]
bg_color = Color(0.588235, 0.054902, 0.105882, 1)

[sub_resource type="LabelSettings" id="LabelSettings_aygv3"]
font_size = 25
outline_size = 3
outline_color = Color(0, 0, 0, 1)
shadow_size = 3

[node name="RPG_Character" type="Node2D"]
script = ExtResource("1_ygs42")

[node name="Sprite" type="Sprite2D" parent="."]
scale = Vector2(0.81686, 0.724955)
texture = ExtResource("1_6m2pv")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -150.0
offset_top = 300.0
offset_right = 150.0
offset_bottom = 348.0
theme_override_styles/background = SubResource("StyleBoxFlat_ygs42")
theme_override_styles/fill = SubResource("StyleBoxFlat_vvltl")
value = 50.0
show_percentage = false

[node name="HealthText" type="Label" parent="HealthBar"]
layout_mode = 0
offset_right = 299.0
offset_bottom = 46.0
text = "25 / 25"
label_settings = SubResource("LabelSettings_aygv3")
horizontal_alignment = 1
vertical_alignment = 1
